--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_short_stories_tab_fragment.xml
@@ -207,6 +207,7 @@
                 app:fab_addButtonPlusIconColor="@color/white_color"
                 app:fab_addButtonStrokeVisible="false"
                 app:fab_labelStyle="@style/menu_labels_style"
+                android:visibility="gone"
                 app:fab_labelsPosition="left">
 
                 <com.getbase.floatingactionbutton.FloatingActionButton
