winner key added

--- a/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
@@ -69,6 +69,7 @@
                         android:scaleType="centerCrop" />
 
                     <RelativeLayout
+                        android:id="@+id/winnerLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignRight="@id/thumbNail"
