--- a/MyCity4Kids/MyCity4Kids/res/layout/video_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_listing_item.xml
@@ -37,6 +37,7 @@
                 card_view:fontName="oswald_regular.ttf" />
 
             <RelativeLayout
+                android:id="@+id/winnerLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txvArticleTitle"
