float button improvment

--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -104,9 +104,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="10dp"
         android:layout_gravity="right|bottom"
+        android:layout_margin="@dimen/space_20"
         android:src="@drawable/ic_plus"
+        android:visibility="gone"
         app:backgroundTint="@color/app_red"
         app:fab_colorNormal="@color/app_red"
         app:fab_colorPressed="@color/app_red"
