rewards string changed

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
@@ -43,9 +43,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView2"
+            android:layout_margin="12sp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="12sp"
             android:gravity="center"
             android:text="@string/rewards_description"
+            android:textSize="16sp"
+            app:fontName="oswald.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/textAgain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text2"
+            android:layout_marginLeft="12sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="12sp"
+            android:gravity="center"
+            android:text="@string/reards.description_secand_text"
             android:textSize="16sp"
             app:fontName="oswald.ttf" />
 
@@ -64,7 +79,7 @@
             android:id="@+id/textStartReward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/text3"
+            android:layout_below="@+id/textAgain"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             android:layout_marginRight="4dp"
@@ -91,8 +106,8 @@
             android:layout_marginBottom="10dp"
             android:elevation="10dp"
             android:gravity="bottom|center"
-            android:shadowColor="@color/app_red"
-            android:shadowDx="1"
+            android:shadowColor="@color/black"
+            android:shadowDx="0"
             android:shadowDy="1"
             android:shadowRadius="5"
             android:text="@string/rewards_welcome"
