--- a/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
@@ -72,6 +72,7 @@
                         android:id="@+id/winnerLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/space_10"
                         android:layout_alignRight="@id/thumbNail"
                         android:layout_alignBottom="@id/articleImageView"
                         android:background="@drawable/update_profile_bg">
