--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -45,6 +45,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="0dp"
+                    android:padding="16dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_flip"
