--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -374,13 +374,20 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:adjustViewBounds="true"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/groups_generic" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha=".2"
+                        android:background="@color/black"
+                       />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                     >
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/groupHeadingTextView"
@@ -391,6 +398,10 @@
                             android:layout_marginTop="40dp"
                             android:layout_marginEnd="20dp"
                             android:layout_marginRight="20dp"
+                            android:shadowColor="@color/black"
+                            android:shadowDx="0"
+                            android:shadowDy="1"
+                            android:shadowRadius="5"
                             android:text="@string/groups.join_support_gp"
                             android:textColor="@color/white"
                             android:textSize="20sp"
@@ -405,6 +416,10 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginEnd="20dp"
                             android:layout_marginRight="20dp"
+                            android:shadowColor="@color/black"
+                            android:shadowDx="0"
+                            android:shadowDy="1"
+                            android:shadowRadius="5"
                             android:text="@string/groups.not_alone"
                             android:textColor="@color/white"
                             android:textSize="14sp"
@@ -421,7 +436,7 @@
                             android:background="@drawable/red_rect_bg"
                             android:gravity="center"
                             android:paddingLeft="20dp"
-                            android:paddingTop="5dp"
+                            android:paddingTop="10dp"
                             android:paddingRight="20dp"
                             android:paddingBottom="10dp"
                             android:text="@string/groups.join_group"
@@ -756,7 +771,6 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 
 
 </RelativeLayout>
