--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -155,21 +155,16 @@
                             android:src="@drawable/ic_search"
                             android:visibility="visible" />
 
-                        <com.mycity4kids.widget.CustomFontTextView
-                            android:id="@+id/langTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableRight="@drawable/arrowdownnew"
-                            android:drawablePadding="5dp"
-                            android:paddingLeft="5dp"
+                        <ImageView
+                            android:id="@+id/notification"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/selector_notification_tab"
+                            android:paddingLeft="10dp"
                             android:paddingTop="10dp"
                             android:paddingRight="10dp"
-                            android:paddingBottom="10dp"
-                            android:text="English"
-                            android:textColor="#545454"
-                            android:textSize="20sp"
-                            android:visibility="visible"
-                            app:fontName="oswald_regular.ttf" />
+                            android:paddingBottom="10dp" />
+
                     </LinearLayout>
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
