--- a/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
@@ -47,6 +47,19 @@
 
         </LinearLayout>
 
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/editKidsName"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/mainprofile_thin_border"
+            android:hint="Enter name"
+            android:inputType="textNoSuggestions"
+            android:paddingLeft="15dp"
+            android:textColor="@color/app_light_black"
+            android:textSize="16dp"
+            app:fontName="oswald_regular.ttf" />
+
         <LinearLayout
             android:id="@+id/layoutKidsDOB"
             android:layout_width="match_parent"
