--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
@@ -25,10 +25,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="@string/rewards_welcome"
-            android:textColor="@color/black"
+            android:text="@string/rewards_participate_and_earn"
+            android:textColor="#666666"
             android:textSize="18sp"
-            android:visibility="gone"
+            android:textAllCaps="true"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/text2"
+            android:visibility="visible"
             app:fontName="oswald_regular.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -57,11 +60,12 @@
             android:id="@+id/textStartReward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/text3"
+            android:layout_below="@+id/text1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="4dp"
             android:background="@drawable/shape_red_fill"
+
             android:gravity="center"
             android:paddingLeft="40dp"
             android:paddingTop="10dp"
